# kxyy-desktop-pet

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json
.github/workflows/: build-windows.yml  ci.yml  release.yml
docs/: creating-a-pet.md  roadmap-ai-roleplay.md  roadmap-realtime-voice.md
electron/: main.js  preload.js
persona-cards/: README.md
persona-cards/bazi-persona/: SKILL.md  persona-card.json
persona-cards/elon-musk/: README.md  knowledge.md  persona-card.json
persona-cards/kxyy-yuanyuan/: README.md  persona-card.json
renderer/: app.js  index.html  pet-config.js  pet-engine.js
scripts/: build-persona-enc.mjs  bundle-assets.mjs  encrypt-assets.mjs  import-skill-from-repo.mjs  kill-services.mjs  make-ico.mjs  run-python-tests.mjs  sync-ai.mjs  sync-assets.mjs
scripts/local-realtime/: acoustic_manifest.py  common.py  daemonize.py  enroll_cosyvoice.py  extract_style.py  requirements-macos.txt  requirements-windows.txt  server.py  server_cosyvoice.py  server_cosyvoice3_local.py  server_indextts2.py  start_all.sh  stop_all.sh  tts_cosyvoice.py  tts_cosyvoice3_local.py  tts_indextts2.py  tts_qwen3_torch.py  vad_adapter.py
scripts/local-realtime/assets/: kxyy-wechat-record-cut01_30s.txt  yuanyuan_ref_15s.txt
scripts/local-realtime/assets/bazi-persona/: ref.txt
scripts/local-realtime/assets/elon-musk/: ref.txt
scripts/local-realtime/assets/kxyy-yuanyuan/: ref.txt
scripts/macos/: setup-qwen3-tts.sh
scripts/persona-distill/: README.md  config.yaml  pipeline.py  requirements.txt  run_isolation.ps1  setup.ps1  test_stuttering.py
scripts/persona-distill/prompts/: extraction.yaml
scripts/persona-distill/schema/: persona-card.schema.json
scripts/persona-distill/steps/: __init__.py  _patch_torchaudio.py  _sitecustomize.py  clean_transcript.py  compile.py  denoise.py  diarize.py  distill.py  extract_anchor.py  extract_stuttering.py  isolation.py  transcribe.py
scripts/persona-distill/tools/: convert_from_assets.py  integrate_distilled.py  pack.py  validate_card.py
scripts/persona-distill/voiceprint/: README.md
scripts/voice-ab/: listen.html  phrases.json  probe_realtime.py  requirements.txt  synth_local.py  synth_volc.py
scripts/windows/: setup-gpu-voice.cmd  setup-gpu-voice.ps1  setup-qwen3-tts.cmd  setup-qwen3-tts.ps1
shared/: roster.json
src/: app.js  chat.css  chat.html  chat.js  index.html  pet-config.js  pet-engine.js  settings.css  settings.html  settings.js  styles.css
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  lib.rs  local_text.rs  main.rs  persona_assets.rs  realtime.rs  skill_import.rs  voice_service.rs
src-tauri/windows/: hooks.nsh
src/ai/: avatars.js  pcm-worklet.js  persona-assets.js  persona.js  playback-worklet.js  realtime-trace.js  realtime.js  stickers.js  tts.js  voice-volume.js
src/stickers/: stickers.json
tests/: realtime-audio-worklets.test.js  realtime-trace.test.js  test_local_realtime_events.py  test_qwen_mlx_stream.py  test_vad_adapter.py
tests/fixtures/: realtime-acoustic-manifest.json  realtime-pcm-replay.json
