[package]
name = "kxyy-desktop-pet"
version = "0.2.5"
description = "元元桌宠"
authors = ["aaronfang"]
license = "MIT"
edition = "2021"

[lib]
name = "kxyy_desktop_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
# 设置面板「参考音频」的本地文件选择对话框
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 本地 AI 代理：轻量回环 HTTP 服务 + 上游流式转发
tiny_http = "0.12"
reqwest = { version = "0.12", features = ["blocking", "json"] }
# 实时语音：本地 WS 桥接前端 ↔ 火山端到端实时语音大模型（自定义鉴权头 + 二进制帧）
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
flate2 = "1"
uuid = { version = "1", features = ["v4"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
